==> ohilab/libohiboard/source/STM32L4/rtc_STM32L4.c <==
#include "rtc.h"
#include "timeday.h"
#include "interrupt.h"
#include "clock.h"
#include "utility.h"
#include "system.h"
#define RTC_MAX_TIMEOUT                   1000
#define RTC_MAX_APREDIV                   128
#define RTC_MAX_SPREDIV                   32768
#define RTC_TR_RESERVED_MASK              0x007F7F7FU
#define RTC_DR_RESERVED_MASK              0x00FFFF3FU
#define RTC_CLOCK_ENABLE(REG,MASK)        do { \
                                            UTILITY_SET_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                          } while (0)
#define RTC_CLOCK_DISABLE(REG,MASK)       do { \
                                            UTILITY_CLEAR_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                          } while (0)
#define RTC_WRITE_PROTECTION_ENABLE(REGMAP)  do { \
                                               (REGMAP)->WPR = 0xFF;   \
                                             } while (0)
#define RTC_WRITE_PROTECTION_DISABLE(REGMAP) do { \
                                               (REGMAP)->WPR = 0xCA;   \
                                               (REGMAP)->WPR = 0x53;   \
                                             } while (0)

static System_Errors Rtc_config (Rtc_DeviceHandle dev)
{
    System_Errors err = ERRORS_NO_ERROR;

    // Disable write-protection
    RTC_WRITE_PROTECTION_DISABLE(dev->regmap);

    err = Rtc_enterInitialization(dev);
    // Initialization problems...
    if (err != ERRORS_NO_ERROR)
    {
        return err;
    }

    // Clear output configuration for ALARM pin
    // Clear hour format configuration
    dev->regmap->CR = dev->regmap->CR & (~(RTC_CR_FMT_Msk | RTC_CR_OSEL_Msk | RTC_CR_POL_Msk));
    dev->regmap->OR = dev->regmap->OR & (~(RTC_OR_ALARMOUTTYPE_Msk | RTC_OR_OUT_RMP_Msk));

    // Setup hour format
    if (dev->hourFormat == RTC_HOURFORMAT_12H)
    {
        dev->regmap->CR |= RTC_CR_FMT;
    }

    // Setup output pin
    if (dev->outputMode != RTC_OUTPUTMODE_DISABLE)
    {
        dev->regmap->CR |= ((dev->outputMode << RTC_CR_OSEL_Pos) | ((dev->outputPolarity == GPIO_LOW) ? RTC_CR_POL : 0 ));
    }
    dev->regmap->OR = ((dev->outputRemap << RTC_OR_OUT_RMP_Pos) | (dev->outputType << RTC_OR_ALARMOUTTYPE_Pos));

    // TODO: Compute and setup clock prescaler
    uint32_t frequency = 0;
    // Get current parent clock
    switch (dev->clockSource)
    {
    case RTC_CLOCK_LSI:
        frequency = (uint32_t)CLOCK_FREQ_LSI;
        break;
    case RTC_CLOCK_LSE:
        frequency = (uint32_t)CLOCK_FREQ_LSE;
        break;
    case RTC_CLOCK_HSE_RTC:
        frequency = (uint32_t)(Clock_getOscillatorValue() / 32u);
        break;
    }
    // Check if frequency is grather than 32000Hz, in this case put
    // asynchronous divider to the maximum value (128)
    if (frequency >= CLOCK_FREQ_LSI)
    {
        // Compute divided frequency
        frequency = frequency / (RTC_MAX_APREDIV - 1);

        if ((frequency > RTC_MAX_SPREDIV) || (frequency == 0))
        {
            // FIXME: Manage error
        }

        dev->regmap->PRER = (uint32_t)(frequency - 1);
        dev->regmap->PRER |= (uint32_t)((RTC_MAX_APREDIV - 1) << 16);
    }
    else
    {
        // FIXME!
    }

    // Exit from configuration mode
    Rtc_exitInitialization(dev);

    // Check Bypass-shadow bit to wait or not the synchronization
    // Question: who set this bit?
    if (UTILITY_READ_REGISTER_BIT(dev->regmap->CR,RTC_CR_BYPSHAD) == 0)
    {
        err = Rtc_waitSynchronization(dev);
        if (err != ERRORS_NO_ERROR)
        {
            return err;
        }
    }

    return ERRORS_NO_ERROR;
}

System_Errors Rtc_init (Rtc_DeviceHandle dev, Rtc_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }
    // Check clock source selections and other configuration parameters
    err  = ohiassert(RTC_IS_VALID_CLOCK_SOURCE(config->clockSource));
    err |= ohiassert(RTC_IS_VALID_HOUR_FORMAT(config->hourFormat));
    err |= ohiassert(RTC_IS_VALID_OUTPUT_MODE(config->outputMode));
    err |= ohiassert(RTC_IS_VALID_OUTPUT_TYPE(config->outputType));
    err |= ohiassert(RTC_IS_VALID_OUTPUT_REMAP(config->outputRemap));
    err |= ohiassert(RTC_IS_VALID_OUTPUT_POLARITY(config->outputPolarity));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_PARAM;
    }
    // Save configuration parameters
    dev->clockSource = config->clockSource;
    dev->hourFormat = config->hourFormat;
    dev->outputMode = config->outputMode;
    dev->outputType = config->outputType;
    dev->outputRemap = config->outputRemap;
    dev->outputPolarity = config->outputPolarity;

    // Enable RTC and backup domain write
    bool isPwrChanged = FALSE;
    if (CLOCK_IS_ENABLE_PWR() == FALSE)
    {
        CLOCK_ENABLE_PWR();
        isPwrChanged = TRUE;
    }

    // Disable write protection
    CLOCK_BACKUP_DISABLE_WRITE_PROTECTION();
    // Wait some cycle...
    asm("NOP");
    asm("NOP");

    // In reset condition, enable clock
    if (dev->state == RTC_DEVICESTATE_RESET)
    {
        // Select clock source
        UTILITY_MODIFY_REGISTER(*dev->rccTypeRegisterPtr,dev->rccTypeRegisterMask,(config->clockSource << dev->rccTypeRegisterPos));
        // Enable peripheral clock
        RTC_CLOCK_ENABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);
    }

    // Now the peripheral is busy
    dev->state = RTC_DEVICESTATE_BUSY;

    // configuration sequence
    err = Rtc_config(dev);
    if (err != ERRORS_NO_ERROR)
    {
        // Restore write-protection
        RTC_WRITE_PROTECTION_ENABLE(dev->regmap);
        dev->state = RTC_DEVICESTATE_ERROR;

        return ERRORS_RTC_INIT_FAILED;
    }

    // Enable the write-protection
    RTC_WRITE_PROTECTION_ENABLE(dev->regmap);

    // Now the peripheral is ready
    dev->state = RTC_DEVICESTATE_READY;

    // Restore PWR status
    if (isPwrChanged == TRUE)
    {
        CLOCK_DISABLE_PWR();
    }

    return ERRORS_NO_ERROR;
}

System_Errors Rtc_deInit (Rtc_DeviceHandle dev)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }

    // Now the peripheral is busy
    dev->state = RTC_DEVICESTATE_BUSY;

    // TODO!

    // Disable peripheral clock
    RTC_CLOCK_DISABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

    // Now the peripheral is in the reset state
    dev->state = RTC_DEVICESTATE_RESET;
    return ERRORS_NO_ERROR;
}

System_Errors Rtc_setTime (Rtc_DeviceHandle dev, Rtc_Time time)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }
    // Check the time value
    err = ohiassert(time > 0);
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_PARAM;
    }

    dev->state = RTC_DEVICESTATE_BUSY;

    Time_DateType mydate;
    Time_TimeType mytime;
    bool isPM = FALSE;
    uint32_t tmpregTime = 0, tmpregDate = 0;

    // Convert unix timestamp to Time and Date Structure
    Time_unixtimeToTime(time,&mydate,&mytime);

    if (dev->hourFormat == RTC_HOURFORMAT_12H)
    {
        if (mytime.hours > 12)
        {
            mytime.hours -= 12;
            isPM = TRUE;
        }
    }

    tmpregTime = (((uint32_t)Utility_byteToBcd2(mytime.hours)   << 16) | \
                  ((uint32_t)Utility_byteToBcd2(mytime.minutes) << 8)  | \
                  ((uint32_t)Utility_byteToBcd2(mytime.seconds))       | \
                  (((dev->hourFormat == RTC_HOURFORMAT_12H) && (isPM)) ? RTC_TR_PM_Msk : 0 ));

    // Only dozen and unit for year
    mydate.year -= 2000;

    tmpregDate = (((uint32_t)Utility_byteToBcd2(mydate.year)  << 16) | \
                  ((uint32_t)Utility_byteToBcd2(mydate.month) << 8)  | \
                  ((uint32_t)Utility_byteToBcd2(mydate.day))         | \
                  ((uint32_t)Utility_byteToBcd2(mydate.wday)  << 13));

    // The values are ready, now enter in initialization mode
    // Disable protection mode
    RTC_WRITE_PROTECTION_DISABLE(dev->regmap);

    err = Rtc_enterInitialization(dev);
    // Initialization problems...
    if (err != ERRORS_NO_ERROR)
    {
        // Restore write-protection
        RTC_WRITE_PROTECTION_ENABLE(dev->regmap);
        dev->state = RTC_DEVICESTATE_ERROR;

        return ERRORS_RTC_TIMEOUT;
    }

    // Set DR and TR registers
    dev->regmap->DR = (uint32_t)(tmpregDate & RTC_DR_RESERVED_MASK);
    dev->regmap->TR = (uint32_t)(tmpregTime & RTC_TR_RESERVED_MASK);

    // Clear BCK bit into CR register... No day-light saving operation here.
    dev->regmap->CR &= ((uint32_t)~RTC_CR_BCK);

    // Exit from configuration mode
    Rtc_exitInitialization(dev);

    // Check Bypass-shadow bit to wait or not the synchronization
    // Question: who set this bit?
    if (UTILITY_READ_REGISTER_BIT(dev->regmap->CR,RTC_CR_BYPSHAD) == 0)
    {
        err = Rtc_waitSynchronization(dev);
        if (err != ERRORS_NO_ERROR)
        {
            // Restore write-protection
            RTC_WRITE_PROTECTION_ENABLE(dev->regmap);
            dev->state = RTC_DEVICESTATE_ERROR;

            return ERRORS_RTC_TIMEOUT;
        }
    }

    // Restore write-protection
    RTC_WRITE_PROTECTION_ENABLE(dev->regmap);
    dev->state = RTC_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

Rtc_Time Rtc_getTime (Rtc_DeviceHandle dev)
{
    Time_DateType mydate;
    Time_TimeType mytime;

    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return 0;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return 0;
    }

    // Read TR and DR registers
    uint32_t tmpregTime = (uint32_t)(dev->regmap->TR & RTC_TR_RESERVED_MASK);
    uint32_t tmpregDate = (uint32_t)(dev->regmap->DR & RTC_DR_RESERVED_MASK);

    // Save values
    mytime.hours   = (uint8_t)((tmpregTime & (RTC_TR_HT_Msk  | RTC_TR_HU_Msk))  >> 16);
    mytime.minutes = (uint8_t)((tmpregTime & (RTC_TR_MNT_Msk | RTC_TR_MNU_Msk)) >> 8);
    mytime.seconds = (uint8_t)(tmpregTime  & (RTC_TR_ST_Msk  | RTC_TR_SU_Msk));
    // Convert BCD to binary
    mytime.hours   = Utility_bcd2ToByte(mytime.hours);
    mytime.minutes = Utility_bcd2ToByte(mytime.minutes);
    mytime.seconds = Utility_bcd2ToByte(mytime.seconds);

    // Check AM/PM status
    if (((tmpregTime & RTC_TR_PM) == RTC_TR_PM) && (dev->hourFormat == RTC_HOURFORMAT_12H))
    {
        mytime.hours += 12;
    }

    mydate.year  = (uint8_t)((tmpregDate & (RTC_DR_YT_Msk | RTC_DR_YU_Msk)) >> 16);
    mydate.month = (uint8_t)((tmpregDate & (RTC_DR_MT_Msk | RTC_DR_MU_Msk)) >> 8);
    mydate.day   = (uint8_t)(tmpregDate  & (RTC_DR_DT_Msk | RTC_DR_DU_Msk));
    // Convert BCD to binary
    mydate.year  = (uint16_t)Utility_bcd2ToByte((uint8_t)mydate.year) + 2000;
    mydate.month = Utility_bcd2ToByte(mydate.month);
    mydate.day   = Utility_bcd2ToByte(mydate.day);

    return (Rtc_Time)Time_getUnixTime(&mydate,&mytime);
}
