==> ohilab/libohiboard/source/PIC24FJ/rtc_PIC24FJ.c <==
#include "rtc.h"
#include "timeday.h"
#include "interrupt.h"
#include "clock.h"
#include "utility.h"
#include "system.h"
#define RTC_MAX_TIMEOUT                 1000
#define RTC_MAX_APREDIV                 128
#define RTC_MAX_SPREDIV                 32768
#define RTC_TR_RESERVED_MASK            0x007F7F7FU
#define RTC_DR_RESERVED_MASK            0x00FFFF3FU
#define RTC_CLOCK_ENABLE(REG,MASK)      do { \
                                            UTILITY_CLEAR_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                        } while (0)
#define RTC_CLOCK_DISABLE(REG,MASK)     do { \
                                            UTILITY_SET_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                        } while (0)
#define RTC_ENABLE()                    do { \
                                            UTILITY_SET_REGISTER_BIT(RTC->RTCCON1L,_RTCCON1L_RTCEN_MASK);\
                                        } while (0)
#define RTC_DISABLE()                   do { \
                                            UTILITY_CLEAR_REGISTER_BIT(RTC->RTCCON1L,_RTCCON1L_RTCEN_MASK);\
                                        } while (0)

static System_Errors Rtc_config (Rtc_DeviceHandle dev, Rtc_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;

    // Save current configuration
    dev->config = *config;

    // setup ClockSource
    UTILITY_MODIFY_REGISTER(dev->regmap->RTCCON2L, _RTCCON2L_CLKSEL_MASK, ((uint16_t)dev->config.clockSource << _RTCCON2L_CLKSEL_POSITION));

    // Setup Output
    UTILITY_MODIFY_REGISTER(dev->regmap->RTCCON1L, _RTCCON1L_OUTSEL_MASK, ((uint16_t)dev->config.outputSignal << _RTCCON1L_OUTSEL_POSITION));

    // Setup Alarm Mask
    UTILITY_MODIFY_REGISTER(dev->regmap->RTCCON1H, _RTCCON1H_AMASK_MASK, ((uint16_t)dev->config.alarmMask << _RTCCON1H_AMASK_POSITION));

    return err;
}

System_Errors Rtc_init (Rtc_DeviceHandle dev, Rtc_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }

    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }

    // Check clock source selections and other configuration parameters
    err  = ohiassert(RTC_IS_VALID_CLOCK_SOURCE(config->clockSource));
    err |= ohiassert(RTC_IS_VALID_OUTPUT(config->outputSignal));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_PARAM;
    }

    // In reset condition, enable clock
    if (dev->state == RTC_DEVICESTATE_RESET)
    {
        // Enable peripheral clock
        RTC_CLOCK_ENABLE(*dev->pmdRegister, dev->pmdRegisterMask);
    }

    // Now the peripheral is disabled
    RTC_DISABLE_WRITE_PROTECTION();
    RTC_RESET();
    dev->state = RTC_DEVICESTATE_BUSY;    

    // configuration sequence
    err = Rtc_config(dev, config);
    Rtc_disableAlarm(dev);
    if (err != ERRORS_NO_ERROR)
    {
        dev->state = RTC_DEVICESTATE_ERROR;
        return ERRORS_RTC_INIT_FAILED;
    }

    // Now the peripheral is ready
    RTC_ENABLE();
    RTC_ENABLE_WRITE_PROTECTION();
    dev->state = RTC_DEVICESTATE_READY;

    return ERRORS_NO_ERROR;
}

System_Errors Rtc_deInit (Rtc_DeviceHandle dev)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }

    // Now the peripheral is busy
    dev->state = RTC_DEVICESTATE_BUSY;

    // Disable peripheral clock
    RTC_CLOCK_DISABLE(*dev->pmdRegister,dev->pmdRegisterMask);

    // Now the peripheral is in the reset state
    dev->state = RTC_DEVICESTATE_RESET;
    return ERRORS_NO_ERROR;
}

System_Errors Rtc_setTime (Rtc_DeviceHandle dev, Rtc_Time time)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the RTC device
    if (dev == NULL)
    {
        return ERRORS_RTC_NO_DEVICE;
    }
    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_DEVICE;
    }
    // Check the time value
    err = ohiassert(time > 0);
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_RTC_WRONG_PARAM;
    }

    // Now the peripheral is disabled
    RTC_DISABLE_WRITE_PROTECTION();
    RTC_DISABLE();
    dev->state = RTC_DEVICESTATE_BUSY;   

    Rtc_writeValue(dev, RTC_VALUE_TYPE_CALENDAR, time);

    // Initialization problems...
    if (err != ERRORS_NO_ERROR)
    {
        // Restore write-protection
        RTC_ENABLE_WRITE_PROTECTION();
        dev->state = RTC_DEVICESTATE_ERROR;

        return ERRORS_RTC_TIMEOUT;
    }

    // Now the peripheral is ready
    RTC_ENABLE();
    RTC_ENABLE_WRITE_PROTECTION();
    dev->state = RTC_DEVICESTATE_SET;

    return ERRORS_NO_ERROR;
}

Rtc_Time Rtc_getTime (Rtc_DeviceHandle dev)
{
    Time_DateType mDate = {0};
    Time_TimeType mTime = {0};

    System_Errors err = ERRORS_NO_ERROR;

    // Check the RTC device
    if (dev == NULL)
    {
        return 0;
    }

    // Check the RTC instance
    err = ohiassert(RTC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return 0;
    }

    // check the Synchronization Status bit
    if(UTILITY_READ_REGISTER_BIT(dev->regmap->RTCSTATL, _RTCSTATL_SYNC_MASK) != 0)
    {
        return 0;
    }

    // Read value
    Rtc_Value value =
    {
        .registers.timel = dev->regmap->TIMEL,
        .registers.timeh = dev->regmap->TIMEH,
        .registers.datel = dev->regmap->DATEL,
        .registers.dateh = dev->regmap->DATEH,
    };

    mTime.seconds = Rtc_convertBCDToHex(value.fields.seconds);
    mTime.hours = Rtc_convertBCDToHex(value.fields.hours);
    mTime.minutes = Rtc_convertBCDToHex(value.fields.minutes);
    mDate.day = Rtc_convertBCDToHex(value.fields.mday);
    mDate.wday = Rtc_convertBCDToHex(value.fields.wday);
    uint16_t year = Rtc_convertBCDToHex(value.fields.years);
    mDate.year = (year >= 70) ? (year + 1900) : (year + 2000);
    mDate.month = Rtc_convertBCDToHex(value.fields.month);

    return (Rtc_Time)Time_getUnixTime(&mDate,&mTime);
}
